# protocol

./: Cargo.toml  LICENSE  README.md
python/skewered_protocol/: __init__.py  envelope.py  event.py  packetizer.py  state.py  types.py
python/tests/: test_protocol.py
src/: envelope.rs  error.rs  event.rs  lib.rs  packetizer.rs  state.rs  types.rs
